--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Under Constructions</title>
+<title>Mj Gabriel 1128</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="files/custom.css" />
 </head>
 <body>
 
-<div style="text-align: center; margin: 2rem auto;">
-    <img src="page-under-construction.jpg" style="width: 50%;" />
+<div class="main-body-container">
+    The quick brown fox jump over the lazy dog
 </div>
+
+<div class="menu-bar-container">
+    <div class="menu-bar">
+        <div id="menu_start" class="main-button">
+            <!-- <img src="files/images/win95-logo2.png" class="main-button-logo" /> -->
+            Start
+        </div>
+    </div>
+</div>
+
+<div id="menu_block" class="menu-block menu-items1">
+    <div class="menu-items-container">
+        <div class="menu-item">About Me</div>
+        <div class="menu-item">Skills</div>
+        <div class="menu-item">Education</div>
+        <div class="menu-item work">Work History</div>
+        <div class="menu-item">Fun Stuff</div>
+        <div class="menu-item gallery">Gallery</div>
+        <div class="menu-item help">About this Theme?</div>
+        <div class="menu-item bottom shutdown">
+            Shut Down&hellip;
+        </div>
+    </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="files/custom.js"></script>
 </body>
 </html>
